Config model updates, voting fixes, continuing from role card fix.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1364,6 +1364,10 @@ blockquote.speech {
 	#results {
 		display: none;
 		background-color: $strawberry-two;
+		
+		#btn-try-again, div {
+			display: none;
+		}
 	}
 }
 
