--- a/templates/partials/shared/vote.hbs
+++ b/templates/partials/shared/vote.hbs
@@ -50,7 +50,8 @@
 	<div id="results" class="content player">
 
 		<h1>Not everyone agreed with the proposal.</h1>
-		Revise your proposal and submit again.
+		<div id="votecaller">Revise your proposal and submit again.</div>
+		<div id="voter">Waiting for {{username}} to dismiss this vote.</div>
 		
 		<button id="btn-try-again" class="btn player" type="submit" name="submit">
 			Try Again
