--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -190,9 +190,17 @@
                 </div>
 
                 <footer id="bottom-bar" style="display: none">
+                    
+                    <button id="btn-role-card" class="player">
+                        <detail class="tooltip-content">You can access your character info here at any point during the game</detail>
+                        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/icons/role">
+                    </button>
 
-                    <button id="btn-role-card"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/icons/role"></button>
-                    <button id="btn-facilitator"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540839844/at-stake/icons/facilitator"></button>
+                    <button id="btn-facilitator" class="decider">
+                        <detail class="tooltip-content">You can access your character info here at any point during the game</detail>
+                        <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540839844/at-stake/icons/facilitator">
+                    </button>
+
                     <div id="name-role">
                         <span id="name"></span>
                         <span id="role"></span>
