--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -10,6 +10,7 @@
  */
 --}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
 <script type="text/javascript">
 
 	var socket,
