--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -159,7 +159,6 @@
 		'game:next_screen',
 		'game:next_round',
 		'game:next_item',
-		// 'game:skip_rules',
 		'game:ending',
 		'game:ended',
 		'game:end',
@@ -179,6 +178,7 @@
 		'game:ready',
 		'game:team_info',
 		'game:event',
+		'game:met_goal',
 
 		'game:rank_next',
 		'game:rank_prev',
